--- a/musicposters.html
+++ b/musicposters.html
@@ -29,6 +29,8 @@
     by the Family Crisis Center. The caption read: "There is no destination. But moving forward 
     day by day is the ultimate goal. As long as there is movement, there is progress."
 </p> -->
+
+<img src="images/stringChamberMockup.jpg" alt="Poster Mockup">
 <div class="logo-display">
         <img src="images/chamberStringsPoster-01.jpg" alt="Poster"><div><h2>String Chamber Ensemble</h2><p>Description</p>
         </div>
