--- a/musicposters.html
+++ b/musicposters.html
@@ -58,8 +58,9 @@
     </div>
     </div>
 
+    <img src="images/chamber" alt="Poster Mockup">
     <div class="logo-display">
-            <img src="images/chamberWinds.jpg" alt="Poster"><div><h2>Chamber Winds</h2><p>Description</p>
+            <img src="images/chamberwindsmockup.jpg" alt="Poster"><div><h2>Chamber Winds</h2><p>Description</p>
             </div>
             </div>
 
