--- a/musicposters.html
+++ b/musicposters.html
@@ -40,7 +40,7 @@
 <img src="images/pianomajors.png" alt="Poster"><div><h2>Piano Majors Recital</h2><p>Description</p>
 </div>
 </div>
-<img src="images/derekmockup2.png" alt="PosterMockup">
+<img src="images/derekmockup2.jpg" alt="PosterMockup">
 
 <div class="logo-display">
         <img src="images/derekBrown-01.jpg" alt="Poster"><div><h2>Derek Brown Poster</h2><p>Description</p>
