--- a/musicposters.html
+++ b/musicposters.html
@@ -36,6 +36,8 @@
         </div>
         </div>
 
+        <img src="images/pianomajorsmockup.jpg" alt="PosterMockup">
+
 <div class="logo-display">
 <img src="images/pianomajors.png" alt="Poster"><div><h2>Piano Majors Recital</h2><p>Description</p>
 </div>
@@ -46,6 +48,7 @@
         <img src="images/derekBrown-01.jpg" alt="Poster"><div><h2>Derek Brown Poster</h2><p>Description</p>
         </div>
         </div>
+<img src="images/jazzmockup.jpg" alt="PosterMockup">
 
         <div class="logo-display">
                 <img src="images/jazzposter.png" alt="Poster"><div><h2>Jazz Ensemble</h2><p>Description</p>
