--- a/musicposters.html
+++ b/musicposters.html
@@ -61,7 +61,7 @@
     </div>
     </div>
 
-    <img src="images/chamber" alt="Poster Mockup">
+    <img src="images/chamberwindsmockup.jpg" alt="Poster Mockup">
     <div class="logo-display">
             <img src="images/chamberwindsmockup.jpg" alt="Poster"><div><h2>Chamber Winds</h2><p>Description</p>
             </div>
