--- a/styleguide.html
+++ b/styleguide.html
@@ -28,6 +28,8 @@
             to the website. The full project and more details can be found
             <a href="https://www.behance.net/gallery/58845243/Web-Style-Guide"><strong>here</strong></a>
 
+            <img src="images/webstyle.png" alt="Web Style Guide">
+
         </div>
 
         </main>
