--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
            <a href="logos.html"><p>Featured Logos</p><img src="images/ProviderFarmsLogo.jpg" alt="Logos"></a>
            <a href="musicposters.html"><p>Music Posters</p><img src="images/derekBrownhome.jpg" alt="Music Posters"></a>
            <a href=""><p>Poster Series</p><img src="images/postericon2.png" alt="More Posters"></a>
-           <a href="styleguide.html"><p>Web Style Guide</p><img src="images/webstyleguideicon.jpg" alt="Web Style Guide"></a>
+           <a href="styleguide.html"><p>Web Style Guide</p><img src="images/instightmockup copy.jpg" alt="Web Style Guide"></a>
            <a href=""><p>Logos</p><img src="images/ProviderFarmsLogo.jpg" alt="Logo"></a>
            <a href="righteous.html"><p>Logos</p><img src="images/rIghteousGraffitiVector.jpg" alt="Logo"></a>
 
