--- a/styleguide.html
+++ b/styleguide.html
@@ -17,7 +17,7 @@
    
     <h2>Insight Web Style Guide</h2>
 </div><div class="display">
-    <img src="images/webstyleguideicon.jpg" alt="Webpage Mockup">
+    <img src="images/instightmockup copy.jpg" alt="Webpage Mockup">
     <!--<img src="images/mountainspokeshop.png" alt="Mountain Spoke Screenshot">-->
         <p>This project is a web style guide for a fictional web magazine, InSight. 
             This website includes an article regarding a 2011 interview with Food Network 
