--- a/styleguide.html
+++ b/styleguide.html
@@ -15,9 +15,10 @@
         
         <h1>here's some of my stuff.</h1>
    
-    <h2>Insight Web Style Guide</h2>
+    <h2>Web Design & Typography</h2>
 </div><div class="display">
     <img src="images/instightmockup copy.jpg" alt="Webpage Mockup">
+    <h2>Insight Web Style Guide</h2>
     <!--<img src="images/mountainspokeshop.png" alt="Mountain Spoke Screenshot">-->
         <p>This project is a web style guide for a fictional web magazine, InSight. 
             This website includes an article regarding a 2011 interview with Food Network 
