--- a/righteous.html
+++ b/righteous.html
@@ -14,6 +14,7 @@
         <main>
         
         <h1>here's some of my stuff.</h1>
+        <h2>Branding, Packaging, & Identity Design</h2>
            </div>
            <div class="display">
 
