--- a/musicposters.html
+++ b/musicposters.html
@@ -63,7 +63,7 @@
 
     <img src="images/chamberwindsmockup.jpg" alt="Poster Mockup">
     <div class="logo-display">
-            <img src="images/chamberwindsmockup.jpg" alt="Poster"><div><h2>Chamber Winds</h2><p>Description</p>
+            <img src="images/chamberWinds.jpg" alt="Poster"><div><h2>Chamber Winds</h2><p>Description</p>
             </div>
             </div>
 
