--- a/binge.html
+++ b/binge.html
@@ -33,8 +33,19 @@
                <img src="images/bingemockup1 copy.jpg" alt="Webpage Mockup">
                <img src="images/bingemockup3.jpg" alt="Webpage Mockup">
                <img src="images/bingemockup4.jpg" alt="Webpage Mockup">
+               <p>Originally, the home button of the navigation header was in the center, reading simplay "binge". 
+                   After user-testing I realized many people were confused as to which direction they should go
+                   and which page they should look at next. After realizing this, I moved the home button to 
+                   the left and placed everything else from left to right in the ideal order. 
+               </p>
                <img src="images/bingemockup5.jpg" alt="Webpage Mockup">
                <img src="images/bingemockup6.jpg" alt="Webpage Mockup">
+               <p>Learning about my target audience for this project was vital. The majority of the "streamers" were
+                   within ages 12-26. I wanted the design and feel of the site to appeal to that audience the most. 
+                   I purposely incorporated a trendy feel made to mimic the platform of the streaming services
+                   themselves. The design, combined with the research and dynamic display, proved to be a major interest
+                   to the final group of users.
+               </p>
                <img src="images/bingemockup.png" alt="Webpage Mockup">
            
          
