--- a/breadbooklet.html
+++ b/breadbooklet.html
@@ -22,10 +22,14 @@
            <img src="images/TypeBookletMockup1 copy.jpg" alt="Webpage Mockup">
            <div><h2>The Living Bread Booklet</h2>
           
-               <p>Binge is a microsite prototype design that publicly enforces the abuse of online video 
-                   streaming services like Netlix, YouTube, Hulu, and Amazon Prime Video. The site acts 
-                   as a public service announcement for those who often binge watch on these services. 
-                   This project was introduced as an information design project. The XD prototype can be found</p>
+               <p>This project consisted of creating a gift booklet with someone in mind that 
+                   included a talk given in the last General Conference of the Church of Jesus 
+                   Christ of Latter-day Saints. The booklet had to include folios with page 
+                   numbers, a front and back cover, a photo and caption of the speaker as well 
+                   as the full talk. I took the liberty of including as well a table of contents, 
+                   a section for notes, a personal letter to the recipient and references 
+                   throughout the talk. This booklet focuses on the talk given by Elder D. 
+                   Todd Christofferson, "The Living Bread Which Came Down From Heaven." </p>
                 </div><img src="images/TypeBookletp1 copy.jpg" alt="Webpage Mockup">
                <img src="images/TypeBookletp2 copy.jpg" alt="Webpage Mockup">
                <img src="images/TypeBookletp3 copy.jpg" alt="Webpage Mockup">
