--- a/breadbooklet.html
+++ b/breadbooklet.html
@@ -26,15 +26,21 @@
                    included a talk given in the last General Conference of the Church of Jesus 
                    Christ of Latter-day Saints. The booklet had to include folios with page 
                    numbers, a front and back cover, a photo and caption of the speaker as well 
-                   as the full talk. I took the liberty of including as well a table of contents, 
-                   a section for notes, a personal letter to the recipient and references 
-                   throughout the talk. This booklet focuses on the talk given by Elder D. 
-                   Todd Christofferson, "The Living Bread Which Came Down From Heaven." </p>
+                   as the full talk.</p>
                 </div><img src="images/TypeBookletp1 copy.jpg" alt="Webpage Mockup">
                <img src="images/TypeBookletp2 copy.jpg" alt="Webpage Mockup">
+               <p>I took the liberty of including as well a table of contents, a section for notes, 
+                   a personal letter to the recipient and references throughout the talk. 
+                   This booklet focuses on the talk given by Elder D. Todd Christofferson, 
+                   "The Living Bread Which Came Down From Heaven." </p>
                <img src="images/TypeBookletp3 copy.jpg" alt="Webpage Mockup">
                <img src="images/TypeBookletp4 copy.jpg" alt="Webpage Mockup">
                <img src="images/TypeBookletp5 copy.jpg" alt="Webpage Mockup">
+               <p>You will find a stair-step theme in the text—this is symbolic of the title 
+                   of the talk. I wanted to emphasize the symbolism in the content because
+                the talk was religously based. I also felt a need to simplify the design to only
+            typographic work so that the content could shine through with only subtle symbolisms
+        that illustrate the meaning of the talk.</p>
                <img src="images/TypeBookletp6 copy.jpg" alt="Webpage Mockup">
                <img src="images/TypeBookletp7 copy.jpg" alt="Webpage Mockup">
                <img src="images/TypeBookletp8 copy.jpg" alt="Webpage Mockup">
