--- a/binge.html
+++ b/binge.html
@@ -33,7 +33,7 @@
                <img src="images/bingemockup1 copy.jpg" alt="Webpage Mockup">
                <img src="images/bingemockup3.jpg" alt="Webpage Mockup">
                <img src="images/bingemockup4.jpg" alt="Webpage Mockup">
-               <p>Originally, the home button of the navigation header was in the center, reading simplay "binge". 
+               <p>Originally, the home button of the navigation header was in the center, reading simply "binge". 
                    After user-testing I realized many people were confused as to which direction they should go
                    and which page they should look at next. After realizing this, I moved the home button to 
                    the left and placed everything else from left to right in the ideal order. 
