--- a/breadbooklet.html
+++ b/breadbooklet.html
@@ -29,20 +29,26 @@
                    as the full talk.</p>
                 </div><img src="images/TypeBookletp1 copy.jpg" alt="Webpage Mockup">
                <img src="images/TypeBookletp2 copy.jpg" alt="Webpage Mockup">
-               <p>I took the liberty of including as well a table of contents, a section for notes, 
+               <div><h2>Adding all the details</h2><p>I took the liberty of including as well a table of contents, a section for notes, 
                    a personal letter to the recipient and references throughout the talk. 
                    This booklet focuses on the talk given by Elder D. Todd Christofferson, 
-                   "The Living Bread Which Came Down From Heaven." </p>
+                   "The Living Bread Which Came Down From Heaven." </p></div>
                <img src="images/TypeBookletp3 copy.jpg" alt="Webpage Mockup">
                <img src="images/TypeBookletp4 copy.jpg" alt="Webpage Mockup">
                <img src="images/TypeBookletp5 copy.jpg" alt="Webpage Mockup">
-               <p>You will find a stair-step theme in the text—this is symbolic of the title 
+               <div><h2>Matching the design to the content</h2><p>You will find a stair-step theme in the text—this is symbolic of the title 
                    of the talk. I wanted to emphasize the symbolism in the content because
                 the talk was religously based. I also felt a need to simplify the design to only
             typographic work so that the content could shine through with only subtle symbolisms
-        that illustrate the meaning of the talk.</p>
+        that illustrate the meaning of the talk.</p></div>
                <img src="images/TypeBookletp6 copy.jpg" alt="Webpage Mockup">
                <img src="images/TypeBookletp7 copy.jpg" alt="Webpage Mockup">
+               <div><h2>Knowing the Audience</h2><p>As this project was meant to be a gift,
+                   I felt that the most important thing was making sure the recipient loved it.
+                   Knowing them well and knowing how organized they are, I knew that they would appreciate those little extra efforts 
+                   like a page for notes and table of contents. I also knew that, as a fellow deep
+                   thinker, they would appreciate the subtle symbolism and the emphasis on the content. 
+               </p></div>
                <img src="images/TypeBookletp8 copy.jpg" alt="Webpage Mockup">
            
          
