--- a/mountain.html
+++ b/mountain.html
@@ -34,7 +34,7 @@
         <img src="images/moutain2.png" alt="Webpage Mockup">
         <img src="images/mountain3.png" alt="Webpage Mockup">
         </div>
-        I then marked up the website and created a responsive design. 
+        <p>I then marked up the website and created a responsive design. 
         The design consists of several pages including a shop page, 
         a contact page and an event registration form.</p>
         <div class="portfoliogrid">
