--- a/mountain.html
+++ b/mountain.html
@@ -46,7 +46,7 @@
             project was in a presentable place. The finished 
             website can be found at this <a href="https://kellodust.github.io/cit_230/assignments/lesson-12/index.html"><strong>link.</strong></a></p> 
       
-        <img src="images/themountainspokemockup.png" alt="Website Mockup">
+        <img src="images/webpageicon.png" alt="Website Mockup">
 
 
          
