--- a/acai.html
+++ b/acai.html
@@ -21,16 +21,21 @@
 <img src="images/acaitop.png" alt="Webpage Mockup">
 <h2>Acaí: An Infographic</h2>
     <!--<img src="images/mountainspokeshop.png" alt="Mountain Spoke Screenshot">-->
-        <p>This project is a web style guide for a fictional web magazine, InSight. 
-            This website includes an article regarding a 2011 interview with Food Network 
-            Chef Bobby Flay. The page includes questions and answers in the original article, 
-            a quote from Bobby Flay's website that acts as the bodycopy for the page, as well 
-            as a list to find some of his recipes. The challenge of this project was to use 
-            two fonts and only two fonts, at least three colors, and a header and footer 
-            to the website. </p>
-            <img src="images/acaianimation.gif" alt="acaigif">
+        <p>This passion project features an infographic about acaí and the origin thereof. 
+            It features the information about the Amazon and the importance of the 
+            acaí berry to the Amazon Rainforest.</p>
+            <img src="https://www.behance.net/gallery/72103483/Discover-Acai-An-Infographic
+            https://mir-s3-cdn-cf.behance.net/project_modules/fs/366b4172103483.5bde26988df33.gif" alt="acaigif">
             <!-- <img src="images/acai3.png" alt="Webpage Mockup"> -->
-            <img src="images/acai4.jpg" alt="Webpage Mockup" style="display: flex; justify-content: center;"> 
+            <div><h2>Having Passion for the Work</h2><p>The infographic was particularly special to 
+                me because of the passion I had for the information in it. I've spent a year and a half
+                in the Amazon Rainforest so when I started the project I wanted to give the design and the 
+                research the time it deserved. 
+                The Amazon people have a very rich culture and are curiously obsessed with the acaí berry. The berry
+                was the perfect subject for my infographic as I truly felt that what I was able to communicate in the
+                infographic would help others to understand their love and need for the berry.
+            </p></div>
+            <img src="images/acai4.jpg" alt="Webpage Mockup" class="acai"> 
 
        
 
