--- a/musicposters.html
+++ b/musicposters.html
@@ -32,14 +32,26 @@
 
 <img src="images/stringChamberMockup.jpg" alt="Poster Mockup">
 <div class="logo-display">
-        <img src="images/chamberStringsPoster-01.jpg" alt="Poster"><div><h2>String Chamber Ensemble</h2><p>Description</p>
+        <img src="images/chamberStringsPoster-01.jpg" alt="Poster">
+        <div><h2>String Chamber Ensemble</h2>
+            <p>This poster, like most of the posters on this page, are a result of my time spent 
+                designing for BYU-Idaho's Department of Music. This poster was one of my last that I 
+                designed for the department. 
+            </p>
         </div>
         </div>
 
         <img src="images/pianomajorsmockup.jpg" alt="PosterMockup">
 
 <div class="logo-display">
-<img src="images/pianomajors.png" alt="Poster"><div><h2>Piano Majors Recital</h2><p>Description</p>
+<img src="images/pianomajors.png" alt="Poster"><div><h2>Piano Majors Recital</h2>
+    <p>I've always thought posters are an ideal canvas for implementing several design elements and
+        principles in the same design. My motivation with every poster is to do that as much as 
+        possible without taking away from the information on the poster. Instead, I want to use 
+        typographic heirarchy, for example, to my advantage in displaying this type of information.
+        This poster is an example of how the heirarchy and negative space worked together to make it
+        cohesive. 
+    </p>
 </div>
 </div>
 <img src="images/derekmockup2.jpg" alt="PosterMockup">
