--- a/musicposters.html
+++ b/musicposters.html
@@ -36,7 +36,8 @@
         <div><h2>String Chamber Ensemble</h2>
             <p>This poster, like most of the posters on this page, are a result of my time spent 
                 designing for BYU-Idaho's Department of Music. This poster was one of my last that I 
-                designed for the department. 
+                designed for the department. With every poster designed, there is also a TV ad, social media
+                images, calendar images, web ads and occasionally banners. 
             </p>
         </div>
         </div>
@@ -57,7 +58,13 @@
 <img src="images/derekmockup2.jpg" alt="PosterMockup">
 
 <div class="logo-display">
-        <img src="images/derekBrown-01.jpg" alt="Poster"><div><h2>Derek Brown Poster</h2><p>Description</p>
+        <img src="images/derekBrown-01.jpg" alt="Poster"><div><h2>Derek Brown Poster</h2>
+            <p>Derek Brown is a saxophone beat-boxer. I wanted his poster to appear as fun and unique 
+                as he is. My research for this project was watching videos of his past performances and 
+                learning how to portray music through design. I think the "research" paid off because
+                he later posted the image on all his social media platforms, mentioned how much he
+                loved it in the concert, and gave me a signed copy of his album. 
+            </p>
         </div>
         </div>
 <img src="images/jazzmockup.jpg" alt="PosterMockup">
