--- a/musicposters.html
+++ b/musicposters.html
@@ -70,19 +70,33 @@
 <img src="images/jazzmockup.jpg" alt="PosterMockup">
 
         <div class="logo-display">
-                <img src="images/jazzposter.png" alt="Poster"><div><h2>Jazz Ensemble</h2><p>Description</p>
+                <img src="images/jazzposter.png" alt="Poster"><div><h2>Jazz Ensemble</h2>
+                    <p>The description I received of the concert contained the words "patriotic jazz". 
+                        After sketches and illustrations, I came up with something I felt portrayed the 
+                        description accurately.
+                    </p>
                 </div>
                </div>
 
 <img src="images/univeristyorchestramockup2.jpg" alt="Poster Mockup">
 <div class="logo-display">
-    <img src="images/universityOrchestra.png" alt="Poster"><div><h2>universityOrchestra</h2><p>Description</p>
+    <img src="images/universityOrchestra.png" alt="Poster"><div><h2>universityOrchestra</h2>
+        <p>This project also gave me a unique project description. I was told that the music 
+            played would combine time travel and world travel. I didn't want the design to be
+            overwhelming so I felt that using different skylines from different times and places
+            would be a good way to communicate the theme. I made sure that the places and the 
+            times were the same ones that would be represented in the concert.
+        </p>
     </div>
     </div>
 
     <img src="images/chamberwindsmockup.jpg" alt="Poster Mockup">
     <div class="logo-display">
-            <img src="images/chamberWinds.jpg" alt="Poster"><div><h2>Chamber Winds</h2><p>Description</p>
+            <img src="images/chamberWinds.jpg" alt="Poster"><div><h2>Chamber Winds</h2>
+                <p>This poster project focused on the principle of negative space. I find that
+                    the more I focus on incorporating the principles of design into my work, 
+                    the happier I am with it. 
+                </p>
             </div>
             </div>
 
