--- a/acai.html
+++ b/acai.html
@@ -24,8 +24,7 @@
         <p>This passion project features an infographic about acaí and the origin thereof. 
             It features the information about the Amazon and the importance of the 
             acaí berry to the Amazon Rainforest.</p>
-            <img src="https://www.behance.net/gallery/72103483/Discover-Acai-An-Infographic
-            https://mir-s3-cdn-cf.behance.net/project_modules/fs/366b4172103483.5bde26988df33.gif" alt="acaigif">
+            <img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/366b4172103483.5bde26988df33.gif" alt="acaigif">
             <!-- <img src="images/acai3.png" alt="Webpage Mockup"> -->
             <div><h2>Having Passion for the Work</h2><p>The infographic was particularly special to 
                 me because of the passion I had for the information in it. I've spent a year and a half
