--- a/logos.html
+++ b/logos.html
@@ -33,12 +33,13 @@
             </p></div></div>
         <img src="images/cactusLogoMockup copy.jpg" alt="Cactus Logo Mockup">
         <img src="images/ProviderFarmsLogo copy.jpg" alt="Cactus Logo Mockup">
-        <div class="logo-display"><img src="images/providericon.jpg" alt="cactus icon"><div><h2>Provider Farms</h2><p>I created this logo and brand as a means to gain
-                insight in how to combine two different objects and create one unique symbol. Throughout this process
-                I did user research many times. I would approach people showing only the icon, not the typography and
-                ask them what they thought the symbol represented and meant. This type of user testing proved to be very 
-                helpful. I was able to implement similar user testing in other logo projects. Overall, I think that this
-                I was successful in communicating both the cactus and the sewing part of the brand through the logo.
+        <div class="logo-display"><img src="images/providericon.jpg" alt="cactus icon"><div><h2>Provider Farms</h2>
+            <p>Provider Farms approached me with a strong business identity and were ready to create their first logo.
+                I knew the logo would likely be used on everything from milk jugs to expo booths so I wanted it to 
+                be a strong symbol. Originally, I had added wheat instead of tufts of grass and farm rows instead of 
+                simple fields. Later the client and I decided it wasn't a good representation of the brand since 
+                no wheat or wheat-related products were sold and I felt that the grass represented cows and their milk 
+                more than wheat. 
             </p></div></div>
         <img src="images/providerFarmsMockupTshirt copy.jpg" alt="Cactus Logo Mockup">
         <img src="images/pinnaclePestLogoMockup copy.jpg" alt="Cactus Logo Mockup">
