--- a/logos.html
+++ b/logos.html
@@ -43,12 +43,11 @@
             </p></div></div>
         <img src="images/providerFarmsMockupTshirt copy.jpg" alt="Cactus Logo Mockup">
         <img src="images/pinnaclePestLogoMockup copy.jpg" alt="Cactus Logo Mockup">
-        <div class="logo-display"><img src="images/pinnacleicon.jpg" alt="cactus icon"><div><h2>Pinnacle Pest Elimination</h2><p>I created this logo and brand as a means to gain
-                insight in how to combine two different objects and create one unique symbol. Throughout this process
-                I did user research many times. I would approach people showing only the icon, not the typography and
-                ask them what they thought the symbol represented and meant. This type of user testing proved to be very 
-                helpful. I was able to implement similar user testing in other logo projects. Overall, I think that this
-                I was successful in communicating both the cactus and the sewing part of the brand through the logo.
+        <div class="logo-display"><img src="images/pinnacleicon.jpg" alt="cactus icon"><div><h2>Pinnacle Pest Control</h2><p>
+            Pinnacle Pest Control approached me with one major requirement: They wanted a part of the Tetons 
+            in the logo. The logo was a very run representation of their company and was a tribute to the detail
+            of the tetons and the rustic feel of them. I incorporated attention to negative space, contrast and the 
+            ability to have a versatile logo.
             </p></div></div>
         <img src="images/pinnacleLogoMockup2.jpg" alt="Cactus Logo Mockup">
     </div>
