--- a/logos.html
+++ b/logos.html
@@ -24,7 +24,7 @@
         </div>
         <div class="display">
         <img src="images/cactusLogoMockup1 copy.jpg" alt="Cactus Logo Mockup">    
-        <div class="logo-display"><img src="images/cactusicon copy.jpg" alt="cactus icon"><div><h2>Cactus Needles: A Tailor Company</h2><p>I created this logo and brand as a means to gain
+        <div class="logo-display-pads"><img src="images/cactusicon copy.jpg" alt="cactus icon"><div><h2>Cactus Needles: A Tailor Company</h2><p>I created this logo and brand as a means to gain
                 insight in how to combine two different objects and create one unique symbol. Throughout this process
                 I did user research many times. I would approach people showing only the icon, not the typography and
                 ask them what they thought the symbol represented and meant. This type of user testing proved to be very 
@@ -33,7 +33,7 @@
             </p></div></div>
         <img src="images/cactusLogoMockup copy.jpg" alt="Cactus Logo Mockup">
         <img src="images/ProviderFarmsLogo copy.jpg" alt="Cactus Logo Mockup">
-        <div class="logo-display"><img src="images/providericon.jpg" alt="cactus icon"><div><h2>Provider Farms</h2>
+        <div class="logo-display-pads"><img src="images/providericon.jpg" alt="cactus icon"><div><h2>Provider Farms</h2>
             <p>Provider Farms approached me with a strong business identity and were ready to create their first logo.
                 I knew the logo would likely be used on everything from milk jugs to expo booths so I wanted it to 
                 be a strong symbol. Originally, I had added wheat instead of tufts of grass and farm rows instead of 
@@ -43,7 +43,7 @@
             </p></div></div>
         <img src="images/providerFarmsMockupTshirt copy.jpg" alt="Cactus Logo Mockup">
         <img src="images/pinnaclePestLogoMockup copy.jpg" alt="Cactus Logo Mockup">
-        <div class="logo-display"><img src="images/pinnacleicon.jpg" alt="cactus icon"><div><h2>Pinnacle Pest Control</h2><p>
+        <div class="logo-display-pads"><img src="images/pinnacleicon.jpg" alt="cactus icon"><div><h2>Pinnacle Pest Control</h2><p>
             Pinnacle Pest Control approached me with one major requirement: They wanted a part of the Tetons 
             in the logo. The logo was a very run representation of their company and was a tribute to the detail
             of the tetons and the rustic feel of them. I incorporated attention to negative space, contrast and the 
