--- a/musicposters.html
+++ b/musicposters.html
@@ -31,7 +31,7 @@
 </p> -->
 
 <img src="images/stringChamberMockup.jpg" alt="Poster Mockup">
-<div class="logo-display">
+<div class=".logo-display-padding ">
         <img src="images/StringChamberEnsemblesPoster.jpg" alt="Poster">
         <div><h2>String Chamber Ensemble</h2>
             <p>This poster, like most of the posters on this page, are a result of my time spent 
