--- a/musicposters.html
+++ b/musicposters.html
@@ -18,7 +18,7 @@
            
 <h2>Poster Design</h2>
         </div>
-<div class="display">
+<div class="logo-display-padding ">
 <!-- <h3>Recovery & Change Poster Series</h3>
 <div class="portfoliogrid">
 <img src="images/saamExhibition.png" alt="Anti-Pornography ">
@@ -31,7 +31,7 @@
 </p> -->
 
 <img src="images/stringChamberMockup.jpg" alt="Poster Mockup">
-<div class=".logo-display-padding ">
+<div class="logo-display">
         <img src="images/StringChamberEnsemblesPoster.jpg" alt="Poster">
         <div><h2>String Chamber Ensemble</h2>
             <p>This poster, like most of the posters on this page, are a result of my time spent 
