--- a/righteous.html
+++ b/righteous.html
@@ -27,15 +27,19 @@
             <img src="images/RighteousInterior1.jpg" alt="Righteous Slice Picture">
             <img src="images/RighteousInterior2.jpg" alt="Righteous Slice Picture">
             <img src="images/righteousdoors.jpg" alt="Righteous Slice Picture"></div>
-            <img src="images/RighteousSliceMephoto.jpg" alt="Righteous Slice Picture">
+            <h2>My Time At Righteous Slice</h2><p>Description</p>
             <img src="images/GraffitiRighteous.png" alt="Righteous Slice Picture">
             <img src="images/DecJanRighteousMockup.jpg" alt="Righteous Slice Picture">
-            
+            <h2>My Time At Righteous Slice</h2><p>Description</p>
             <img src="images/RighteousSliceCards1.jpg" alt="Righteous Slice Picture">
+            <div class="four-column">
             <img src="images/RighteousSocial1.png" alt="Righteous Slice Picture">
             <img src="images/RighteousSocial2.png" alt="Righteous Slice Picture">
             <img src="images/RighteousSocial3.png" alt="Righteous Slice Picture">
             <img src="images/RighteousSocial4.png" alt="Righteous Slice Picture">
+        </div>
+            <h2>My Time At Righteous Slice</h2><p>Description</p>
+            <img src="images/RighteousSliceMephoto.jpg" alt="Righteous Slice Picture">
             
         </div>
 
