--- a/righteous.html
+++ b/righteous.html
@@ -21,7 +21,7 @@
 
         
         
-            <img src="images/rIghteousGraffitiVector.jpg" alt="Righteous Slice Picture">
+            <img src="images/GraffitiRighteous.png" alt="Righteous Slice Picture">
             <h2>My Time At Righteous Slice</h2><p>Description</p>
             <div class="logo-display">
             <img src="images/RighteousInterior1.jpg" alt="Righteous Slice Picture">
