--- a/righteous.html
+++ b/righteous.html
@@ -23,7 +23,7 @@
         
             <img src="images/GraffitiRighteous.png" alt="Righteous Slice Picture">
             <h2>My Time At Righteous Slice</h2><p>Description</p>
-            <div class="logo-display">
+            <div class="portfoliogrid">
             <img src="images/RighteousInterior1.jpg" alt="Righteous Slice Picture">
             <img src="images/RighteousInterior2.jpg" alt="Righteous Slice Picture">
             <img src="images/righteousdoors.jpg" alt="Righteous Slice Picture"></div>
