--- a/righteous.html
+++ b/righteous.html
@@ -22,16 +22,22 @@
         
         
             <img src="images/GraffitiRighteous.png" alt="Righteous Slice Picture">
-            <h2>My Time At Righteous Slice</h2><p>Description</p>
+            <h2>My Time At Righteous Slice</h2><p>Righteous Slice is a restaurant
+                that serves traditional Neapolitan Pizza. I became the company's head
+                graphic designer when they opened and developed their brand from what they 
+                already had (a logo and color scheme) to an indentity.
+            </p>
             <div class="portfoliogrid">
             <img src="images/RighteousInterior1.jpg" alt="Righteous Slice Picture">
             <img src="images/RighteousInterior2.jpg" alt="Righteous Slice Picture">
             <img src="images/righteousdoors.jpg" alt="Righteous Slice Picture"></div>
             <h2>My Time At Righteous Slice</h2><p>Description</p>
-            <img src="images/GraffitiRighteous.png" alt="Righteous Slice Picture">
+            <img src="images/GraffitiRighteous2.png" alt="Righteous Slice Picture">
+            <h2>My Time At Righteous Slice</h2><p>Description</p>
             <img src="images/DecJanRighteousMockup.jpg" alt="Righteous Slice Picture">
             <h2>My Time At Righteous Slice</h2><p>Description</p>
             <img src="images/RighteousSliceCards1.jpg" alt="Righteous Slice Picture">
+            <h2>My Time At Righteous Slice</h2><p>Description</p>
             <div class="four-column">
             <img src="images/RighteousSocial1.png" alt="Righteous Slice Picture">
             <img src="images/RighteousSocial2.png" alt="Righteous Slice Picture">
