--- a/righteous.html
+++ b/righteous.html
@@ -28,9 +28,10 @@
                 already had (a logo and color scheme) to an identity.
             </p>
             <div class="portfoliogrid">
+            <img src="images/righteousdoors.jpg" alt="Righteous Slice Picture">
             <img src="images/RighteousInterior1.jpg" alt="Righteous Slice Picture">
             <img src="images/RighteousInterior2.jpg" alt="Righteous Slice Picture">
-            <img src="images/righteousdoors.jpg" alt="Righteous Slice Picture"></div>
+            </div>
             <h2>Signage and Atmosphere</h2><p>Projects included interior and exterior
                 signage as well as designs for vinyl and paint. Much of what I designed as 
                 drafts were later implemented into the interior.
