--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
            <a href="mountain.html"><p>The Mountain Spoke Website</p><img src="images/mountainmockup.jpg" alt="Mountain Spoke Website"></a>
            <a href="logos.html"><p>Featured Logos</p><img src="images/ProviderFarmsLogo.jpg" alt="Logos"></a>
            <a href="musicposters.html"><p>Music Posters</p><img src="images/derekBrownhome.jpg" alt="Music Posters"></a>
-           <a href=""><p>Poster Series</p><img src="images/postericon2.png" alt="More Posters"></a>
+           <a href="musicwebsite.html"><p>Poster Series</p><img src="images/byuiwebmockup1.jpg" alt="Website Redesign"></a>
            <a href="styleguide.html"><p>Web Style Guide</p><img src="images/instightmockup copy.jpg" alt="Web Style Guide"></a>
            <a href=""><p>Logos</p><img src="images/ProviderFarmsLogo.jpg" alt="Logo"></a>
            <a href="righteous.html"><p>Logos</p><img src="images/GraffitiRighteous2.png" alt="Logo"></a>
