--- a/rainyday.html
+++ b/rainyday.html
@@ -18,7 +18,7 @@
          
     <h3>The Rainy Day Design and Development</h3>
     
-    <img src="images/Web-Showcase-Project-Presentation.png" alt="Webpage Mockup">
+    <img src="images/rainydaymockup.jpg" alt="Webpage Mockup">
     <!--<img src="images/mountainspokeshop.png" alt="Mountain Spoke Screenshot">-->
         <p>The Rainy Day is a weather site. The target audience is wealthy travelers. 
             I designed and developed this site from scratch, however, this site is not actually 
