--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="home-grid">
            <a href="binge.html"><p>Binge Website Prototype</p><img src="images/binge0.jpg" alt="Binge Website"></a>
            <a href="breadbooklet.html"><p>The Living Bread Booklet</p><img src="images/TypeBookletMockup1.jpg" alt="Typography Booklet"></a>
-           <a href="rainyday.html"><p>Rainy Day Website</p><img src="images/rainydaywebpageicon.png" alt="Rainy Day Website"></a>
+           <a href="rainyday.html"><p>Rainy Day Website</p><img src="images/rainydaymockup.jpg" alt="Rainy Day Website"></a>
            <a href="bookcover.html"><p>Book Cover</p><img src="images/bookcovericon.png" alt="Book Cover"></a>
            <a href="acai.html"><p>Acai Infographic</p><img src="images/acai4.jpg" alt="Acai Infographic"></a>
            <a href="mountain.html"><p>The Mountain Spoke Website</p><img src="images/mountainmockup.jpg" alt="Mountain Spoke Website"></a>
