--- a/musicwebsite.html
+++ b/musicwebsite.html
@@ -31,7 +31,7 @@
         asked-for features first. The site as it currently stands is found at this
         <a href="http://www.byui.edu/music"><strong>link</strong></a>. 
         
-    <div class="four-column"><img src="images/byui1.png" alt="Webpage Mockup">
+    <div class="four-column music"><img src="images/byui1.png" alt="Webpage Mockup">
         <img src="images/byui2.png" alt="Webpage Mockup">
         <img src="images/byui3.png" alt="Webpage Mockup">
         <img src="images/byui4.png" alt="Webpage Mockup">
