--- a/rainyday.html
+++ b/rainyday.html
@@ -28,7 +28,7 @@
             <a href="https://kellodust.github.io/cit_230/assignments/weather-site/index.html"><strong>
                 link.</strong>
             </a> </p>
-    
+            <img src="images/rainyday2.png" alt="Webpage Mockup">
 
 
         </main>
