--- a/rainyday.html
+++ b/rainyday.html
@@ -27,6 +27,11 @@
             <a href="https://kellodust.github.io/cit_230/assignments/weather-site/index.html"><strong>
                 link.</strong>
             </a> </p>
+            <div class="portfoliogrid"><img src="images/rainyday1.png" alt="Webpage Mockup">
+                <img src="images/rainyday3.png" alt="Webpage Mockup">
+                <img src="images/rainyday4.png" alt="Webpage Mockup">
+              
+                </div>
             <h2>User Testing</h2><p>The site consists of 6 full pages and includes a gallery, form, tables and 
                 other features. The user testing I performed for this site was particularly helpful in
                 navigation and wayfinding.
