--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
            <a href="musicposters.html"><p>Music Posters</p><img src="images/derekBrownhome.jpg" alt="Music Posters"></a>
            <a href="musicwebsite.html"><p>Website Redesign</p><img src="images/byuiwebmockup1.jpg" alt="Website Redesign"></a>
            <a href="styleguide.html"><p>Web Style Guide</p><img src="images/instightmockup copy.jpg" alt="Web Style Guide"></a>
-           <a href=""><p>Logos</p><img src="images/ProviderFarmsLogo.jpg" alt="Logo"></a>
-           <a href="righteous.html"><p>Logos</p><img src="images/GraffitiRighteous2.png" alt="Logo"></a>
+           <a href="playposter.html"><p>Play Poster</p><img src="images/postericon2.png" alt="Logo"></a>
+           <a href="righteous.html"><p>Righteous Slice Branding</p><img src="images/GraffitiRighteous2.png" alt="Logo"></a>
 
         </div>
 
