--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
            <a href="musicposters.html"><p>Music Posters</p><img src="images/derekBrownhome.jpg" alt="Music Posters"></a>
            <a href="musicwebsite.html"><p>Website Redesign</p><img src="images/byuiwebmockup1.jpg" alt="Website Redesign"></a>
            <a href="styleguide.html"><p>Web Style Guide</p><img src="images/instightmockup copy.jpg" alt="Web Style Guide"></a>
-           <a href="playposter.html"><p>Play Poster</p><img src="images/postericon2.png" alt="Logo"></a>
+           <a href="playposter.html"><p>Play Poster</p><img src="images/https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/57189656650641.59b751e4672be.jpg" alt="Logo"></a>
            <a href="righteous.html"><p>Righteous Slice Branding</p><img src="images/GraffitiRighteous2.png" alt="Logo"></a>
 
         </div>
