--- a/playposter.html
+++ b/playposter.html
@@ -45,7 +45,7 @@
         <img src="images/pianomajorsmockup.jpg" alt="PosterMockup">
 
 <div class="logo-display">
-<img src="images/pianomajors.png" alt="Poster"><div><h2>Piano Majors Recital</h2>
+<img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/57189656650641.59b751e4672be.jpg" alt="Poster"><div><h2>Piano Majors Recital</h2>
     <p>I've always thought posters are an ideal canvas for implementing several design elements and
         principles in the same design. My motivation with every poster is to do that as much as 
         possible without taking away from the information on the poster. Instead, I want to use 
