--- a/playposter.html
+++ b/playposter.html
@@ -33,7 +33,7 @@
 <img src="images/stringChamberMockup.jpg" alt="Poster Mockup">
 <div class="logo-display">
         <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/3a761d56650641.59b751bdb1b9b.png" alt="Poster">
-        <div><h2>String Chamber Ensemble</h2>
+        <div><h2>Type Inspired Poster</h2>
             <p>This poster, like most of the posters on this page, are a result of my time spent 
                 designing for BYU-Idaho's Department of Music. This poster was one of my last that I 
                 designed for the department. With every poster designed, there is also a TV ad, social media
@@ -45,7 +45,8 @@
         <img src="images/pianomajorsmockup.jpg" alt="PosterMockup">
 
 <div class="logo-display">
-<img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/57189656650641.59b751e4672be.jpg" alt="Poster"><div><h2>Piano Majors Recital</h2>
+<img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/57189656650641.59b751e4672be.jpg" alt="Poster"><div>
+    <h2>Icon Inspired Poster</h2>
     <p>I've always thought posters are an ideal canvas for implementing several design elements and
         principles in the same design. My motivation with every poster is to do that as much as 
         possible without taking away from the information on the poster. Instead, I want to use 
