--- a/playposter.html
+++ b/playposter.html
@@ -30,7 +30,7 @@
     day by day is the ultimate goal. As long as there is movement, there is progress."
 </p> -->
 
-<img src="images/stringChamberMockup.jpg" alt="Poster Mockup">
+<img src="images/playposter1.jpg" alt="Poster Mockup">
 <div class="logo-display">
         <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/3a761d56650641.59b751bdb1b9b.png" alt="Poster">
         <div><h2>Type Inspired Poster</h2>
@@ -42,7 +42,7 @@
         </div>
         </div>
 
-        <img src="images/pianomajorsmockup.jpg" alt="PosterMockup">
+        <img src="images/playposter2.jpg" alt="PosterMockup">
 
 <div class="logo-display">
 <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/57189656650641.59b751e4672be.jpg" alt="Poster"><div>
@@ -58,48 +58,6 @@
 </div>
 <img src="images/derekmockup2.jpg" alt="PosterMockup">
 
-<div class="logo-display">
-        <img src="images/derekBrown-01.jpg" alt="Poster"><div><h2>Derek Brown Poster</h2>
-            <p>Derek Brown is a saxophone beat-boxer. I wanted his poster to appear as fun and unique 
-                as he is. My research for this project was watching videos of his past performances and 
-                learning how to portray music through design. I think the "research" paid off because
-                he later posted the image on all his social media platforms, mentioned how much he
-                loved it in the concert, and gave me a signed copy of his album. 
-            </p>
-        </div>
-        </div>
-<img src="images/jazzmockup.jpg" alt="PosterMockup">
-
-        <div class="logo-display">
-                <img src="images/jazzposter.png" alt="Poster"><div><h2>Jazz Ensemble</h2>
-                    <p>The description I received of the concert contained the words "patriotic jazz". 
-                        After sketches and illustrations, I came up with something I felt portrayed the 
-                        description accurately.
-                    </p>
-                </div>
-               </div>
-
-<img src="images/univeristyorchestramockup2.jpg" alt="Poster Mockup">
-<div class="logo-display">
-    <img src="images/universityOrchestra.png" alt="Poster"><div><h2>university Orchestra</h2>
-        <p>This project also gave me a unique project description. I was told that the music 
-            played would combine time travel and world travel. I didn't want the design to be
-            overwhelming so I felt that using different skylines from different times and places
-            would be a good way to communicate the theme. I made sure that the places and the 
-            times were the same ones that would be represented in the concert.
-        </p>
-    </div>
-    </div>
-
-    <img src="images/chamberwindsmockup.jpg" alt="Poster Mockup">
-    <div class="logo-display">
-            <img src="images/chamberWinds.jpg" alt="Poster"><div><h2>Chamber Winds</h2>
-                <p>This poster project focused on the principle of negative space. I find that
-                    the more I focus on incorporating the principles of design into my work, 
-                    the happier I am with it. 
-                </p>
-            </div>
-            </div>
 
 
         </main>
